--- a/WillWCF/WcfServiceLibrary/App.config
+++ b/WillWCF/WcfServiceLibrary/App.config
@@ -24,6 +24,23 @@
           </baseAddresses>
         </host>
       </service>
+      <service name="WcfServiceLibrary.JudyWcfService">
+        <endpoint address=""
+                  binding="basicHttpBinding"
+                  contract="WcfServiceLibrary.IJudyWcfService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex"
+                  binding="mexHttpBinding"
+                  contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8734/Design_Time_Addresses/WcfServiceLibrary/JudyWcfService/" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
