--- a/KingPro/KingPro/KingPro/KingPro.csproj
+++ b/KingPro/KingPro/KingPro/KingPro.csproj
@@ -34,6 +34,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DataGridOperation">
+      <HintPath>..\ExternalDrops\DataGridOperation.dll</HintPath>
+    </Reference>
+    <Reference Include="DataTimePicker">
+      <HintPath>..\ExternalDrops\DataTimePicker.dll</HintPath>
+    </Reference>
+    <Reference Include="FolderBrowser">
+      <HintPath>..\ExternalDrops\FolderBrowser.dll</HintPath>
+    </Reference>
+    <Reference Include="MVVMBase">
+      <HintPath>..\ExternalDrops\MVVMBase.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -44,6 +56,12 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="WillDataBaseOperation">
+      <HintPath>..\ExternalDrops\WillDataBaseOperation.dll</HintPath>
+    </Reference>
+    <Reference Include="WillDataProcess">
+      <HintPath>..\ExternalDrops\WillDataProcess.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
