--- a/WillWCF/ConsoleClient/App.config
+++ b/WillWCF/ConsoleClient/App.config
@@ -7,12 +7,16 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IWillWcfService" />
+                <binding name="BasicHttpBinding_IJudyWcfService" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8733/Design_Time_Addresses/WcfServiceLibrary/WillWcfService/"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWillWcfService"
                 contract="WillWcfServiceReference.IWillWcfService" name="BasicHttpBinding_IWillWcfService" />
+            <endpoint address="http://localhost:8734/Design_Time_Addresses/WcfServiceLibrary/JudyWcfService/"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IJudyWcfService"
+                contract="JudyWcfServiceReference.IJudyWcfService" name="BasicHttpBinding_IJudyWcfService" />
         </client>
     </system.serviceModel>
 </configuration>
