--- a/WillWCF/WcfServiceLibrary/WcfServiceLibrary.csproj
+++ b/WillWCF/WcfServiceLibrary/WcfServiceLibrary.csproj
@@ -44,7 +44,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IJudyWcfService.cs" />
     <Compile Include="IWillWcfService.cs" />
+    <Compile Include="JudyWcfService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WillWcfService.cs" />
   </ItemGroup>
